--- a/events.html
+++ b/events.html
@@ -71,11 +71,11 @@
             <div class="row">
                 <div class="col-sm-6 text-left">
                     <div class="service-box">
-                        <h3>C&amp;C October Meetup</h3>
-                        <p class="text-muted">Saturday, October 17 from 7am - 9am at Community Bible Church at 2025 Williston Rd., South Burlington</p>
+                        <h3>C&amp;C May Meetup</h3>
+                        <p class="text-muted">Saturday, May 21 from 7am - 9am at Community Bible Church at 2025 Williston Rd., South Burlington</p>
                     </div>
                     <div class="service-box">
-                        <h3>Check back in May for our next season of events!</h3>
+                        <h3>Check back often for our next season of events!</h3>
                     </div>
                 </div>
                 <div class="col-sm-6 text-left">
