String and link changes

--- a/events.html
+++ b/events.html
@@ -79,14 +79,15 @@
                     </div>
                 </div>
                 <div class="col-sm-6 text-left">
-                    <div class="service-box">
-                        <img class="img-responsive" src="img/weather_go.png">
-                    </div>
                     <br>
                     <div class="service-box">
                         <h3>Attend other events in the area!</h3>
                         <a href="http://www.carzcarclub.com/2015_Calendar_of_Events.html" class="btn btn-primary btn-md page-scroll">Carz Car Club</a>
                         <a href="http://www.vtcustomauto.com/Event---Show-Schedule-.html" class="btn btn-primary btn-md page-scroll">VT Custom Auto Service</a>
+                        <br>
+                        <br>
+                        <a href="http://vtauto.org/carshows.php" class="btn btn-primary btn-md page-scroll">VAE Car Shows</a>
+                        <a href="http://vtauto.org/calendar.php" class="btn btn-primary btn-md page-scroll">VAE Events</a>
                     </div>
                 </div>
                 </div>
