--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Fueled by petrol, caffeine, and passion.</h2>
                     <hr class="light">
-                    <p class="text-faded">Once a month on a Saturday morning, car enthusiasts gather to drink coffee, talk cars, and make new friends.</p>
+                    <p class="text-faded">Once a month on a Saturday morning, car enthusiasts gather to drink coffee, talk cars, and make new friends. CarsCoffeeVermont is an outreach program of Vermont Auto Enthusiasts!</p>
                     <a href="https://docs.google.com/forms/d/1Fd9gneRBv0IGAphjzetDG__wQjD0WD1iQYdXrmYfxso/viewform?usp=send_form" class="btn btn-default btn-xl">Sign up for our newsletter!</a>
+
+                    <a href="https://docs.google.com/forms/d/1Fd9gneRBv0IGAphjzetDG__wQjD0WD1iQYdXrmYfxso/viewform?usp=send_form" class="btn btn-default btn-xl">Vermont Auto Enthusiasts</a>
                 </div>
             </div>
         </div>
@@ -111,20 +113,22 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="service-box">
-                        <img class="img-responsive" src="img/weather_go.png">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
+             <div class="col-lg-4 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar-o wow bounceIn text-primary"></i>
                         <h3>C&amp;C May Meetup</h3>
                         <p class="text-muted">Saturday, May 21 from 7am - 9am at Community Bible Church at 2025 Williston Rd., South Burlington</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 text-center">
+                <div class="col-lg-4 col-xs-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-sun-o wow bounceIn text-primary"></i>
+                        <h3>Rain or Shine</h3>
+                        <p class="text-muted">Folks will be at the event regardless of weather conditions. If we don't like the weather, wait 5 minutes.</p>
+                    </div>
+                </div>
+               
+                <div class="col-lg-4 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Calendar</h3>
@@ -150,7 +154,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
-                    <a href="photos.html" class="portfolio-box">
+                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box">
                         <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -165,7 +169,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="photos.html" class="portfolio-box">
+                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
                         <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -180,7 +184,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="photos.html" class="portfolio-box">
+                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
                         <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -195,7 +199,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="photos.html" class="portfolio-box">
+                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
                         <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -248,7 +252,12 @@
             <br>
             <br>
             <div>
-                <a href="http://www.bondauto.com/our-locations/"><img src="img/bondautoparts_banner_v1.png" class="img-responsive"/></a>
+                <a href="http://www.bondauto.com/our-locations/"><img alt=
+            "Bond Auto Parts Banner" src="img/bondautoparts_banner_v1.png" class="img-responsive"/></a>
+            </div>
+            <br>
+             <div>
+                <a href="http://www.vtcustomauto.com/"><img alt="Vertmont Auto Service Banner" src="img/vtcustomautoservice_banner_v1.png" class="img-responsive"/></a>
             </div>
         </div>
     </section>
@@ -257,7 +266,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Join our community on Facebook!</h2>
-                <a href="https://www.facebook.com/CarsAndCoffeeOfVT" class="btn btn-default btn-xl wow tada">Facebook</a>
+                <a href="https://www.facebook.com/groups/523141531158247/" class="btn btn-default btn-xl wow tada">Facebook</a>
             </div>
         </div>
     </aside>
