Added VTAE logo

--- a/index.html
+++ b/index.html
@@ -96,8 +96,13 @@
                     <hr class="light">
                     <p class="text-faded">Once a month on a Saturday morning, car enthusiasts gather to drink coffee, talk cars, and make new friends. CarsCoffeeVermont is an outreach program of Vermont Auto Enthusiasts!</p>
                     <a href="https://docs.google.com/forms/d/1Fd9gneRBv0IGAphjzetDG__wQjD0WD1iQYdXrmYfxso/viewform?usp=send_form" class="btn btn-default btn-xl">Sign up for our newsletter!</a>
-
-                    <a href="https://docs.google.com/forms/d/1Fd9gneRBv0IGAphjzetDG__wQjD0WD1iQYdXrmYfxso/viewform?usp=send_form" class="btn btn-default btn-xl">Vermont Auto Enthusiasts</a>
+                    <br>
+                    <br>
+                     <div>
+                        <a href="http://vtauto.org/">
+                            <img style="margin:auto;" alt="Vertmont Auto Enthusiasts Logo" width="25%" margin="auto" src="img/vtautoenthusiasts_logo.png" class="img-responsive"/>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
