--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">Cars &amp; Coffee Vermont</a>
+                <a class="navbar-brand page-scroll events-brand" href="index.html">Cars &amp; Coffee Vermont</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <!-- /.navbar-collapse -->
