Added alt text and h1

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <img src="img/coffeecarsvt_v6.png" width="40%">
-                <!-- <h2>Fueled by petrol, caffeine, and passion.</h2>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
+                <h1><img alt="Cars and Coffee Vermont Logo" src="img/coffeecarsvt_v6.png" width="40%"></h1>
             </div>
         </div>
     </header>
@@ -235,22 +233,24 @@
             <div class="row">
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="http://www.signaramavt.com/"><img src="img/SAR_grey.png" class="img-responsive" onmouseover="this.src='img/SAR.png'" onmouseout="this.src='img/SAR_grey.png'"/></a>
+                        <a href="http://www.signaramavt.com/"><img alt="Vermont Signarama Logo" src="img/SAR_grey.png" class="img-responsive" onmouseover="this.src='img/SAR.png'" onmouseout="this.src='img/SAR_grey.png'"/></a>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="http://www.communitybiblechurch.ws/"><img src="img/CBCLogo_BW.jpg" class="img-responsive" onmouseover="this.src='img/CBCLogo_C.jpg'" onmouseout="this.src='img/CBCLogo_BW.jpg'"/></a>
+                        <a href="http://www.communitybiblechurch.ws/"><img alt="Vermont Community Bible Church" src="img/CBCLogo_BW.jpg" class="img-responsive" onmouseover="this.src='img/CBCLogo_C.jpg'" onmouseout="this.src='img/CBCLogo_BW.jpg'"/></a>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="#"><img src="img/be_a_sponsor.png" class="img-responsive" onmouseover="this.src='img/be_a_sponsor.png'" onmouseout="this.src='img/be_a_sponsor.png'"/></a>
+                        <a href="#"><img alt=
+                            "Be a sponser" src="img/be_a_sponsor.png" class="img-responsive" onmouseover="this.src='img/be_a_sponsor.png'" onmouseout="this.src='img/be_a_sponsor.png'"/></a>
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="#"><img src="img/be_a_sponsor.png" class="img-responsive" onmouseover="this.src='img/be_a_sponsor.png'" onmouseout="this.src='img/be_a_sponsor.png'"/></a>
+                        <a href="#"><img alt=
+                            "Be a sponser" src="img/be_a_sponsor.png" class="img-responsive" onmouseover="this.src='img/be_a_sponsor.png'" onmouseout="this.src='img/be_a_sponsor.png'"/></a>
                     </div>
                 </div>
             </div>
