--- a/index_aug_20_16.html
+++ b/index_aug_20_16.html
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <img src="img/coffeecarsvt_v6_jcm_next event_9_17.png" width="40%">
+                <img src="img/coffeecarsvt_v6_jcm_next event_aug20.png" width="40%">
                 <!-- <h2>Fueled by petrol, caffeine, and passion.</h2>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
             </div>
@@ -150,7 +150,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Check out photos from our past events!</h2>
-                 <a href="https://flic.kr/s/aHskFrwpT4" class="btn btn-default btn-xl wow tada">Last Event</a>
+                 <a href="https://www.flickr.com/photos/133543877@N03/albums/72157671787517741" class="btn btn-default btn-xl wow tada">Last Event</a>
                 <a href="https://www.flickr.com/photos/133543877@N03/sets" class="btn btn-default btn-xl wow tada">Photo Archives</a>
                 <a href="http://www.boystoystoo.com/cc16.html" class="btn btn-default btn-xl wow tada">BoysToysToo</a>
             </div>
