--- a/events.html
+++ b/events.html
@@ -71,8 +71,8 @@
             <div class="row">
                 <div class="col-sm-6 text-left">
                     <div class="service-box">
-                        <h3>C&amp;C May Meetup</h3>
-                        <p class="text-muted">Saturday, May 21 from 7am - 9am at Community Bible Church at 2025 Williston Rd., South Burlington</p>
+                        <h3>C&amp;C September Meetup</h3>
+                        <p class="text-muted">Saturday, SEptember 17th from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
                     </div>
                     <div class="service-box">
                         <h3>Check back often for our next season of events!</h3>
@@ -88,6 +88,9 @@
                         <br>
                         <a href="http://vtauto.org/carshows.php" class="btn btn-primary btn-md page-scroll">VAE Car Shows</a>
                         <a href="http://vtauto.org/calendar.php" class="btn btn-primary btn-md page-scroll">VAE Events</a>
+                        <br>
+                        <br>
+                        <a href="http://www.hemmings.com/calendar/?location_stateFacet=Vermont" class="btn btn-primary btn-md page-scroll">Hemmings</a>
                     </div>
                 </div>
                 </div>
@@ -120,7 +123,7 @@
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script>
      function init_map() {
-        var var_location = new google.maps.LatLng(44.459084,-73.14721);
+        var var_location = new google.maps.LatLng(44.464863,-73.181398);
  
         var var_mapoptions = {
           center: var_location,
