Bringing things up to date.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <img src="img/coffeecarsvt_v6_jcm_next event_9_17.png" width="40%">
+                <img src="img/coffeecarsvt_v2020_next event_jul18.png" width="40%">
                 <!-- <h2>Fueled by petrol, caffeine, and passion.</h2>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
             </div>
@@ -121,8 +121,8 @@
              <div class="col-lg-4 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar-o wow bounceIn text-primary"></i>
-                        <h3>C&amp;C September Meetup</h3>
-                        <p class="text-muted">Saturday, September 17th from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
+                        <h3>C&amp;C July Meetup</h3>
+                        <p class="text-muted">Saturday, July 18th from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-xs-12 text-center">
@@ -137,7 +137,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Calendar</h3>
-                        <p class="text-muted">Check out all our upcoming events!</p>
+                        <p class="text-muted">Other events in the area! </p>
                     </br>
                         <a href="events.html" class="btn btn-primary btn-xl page-scroll">All Events</a>
                     </div>
@@ -150,9 +150,9 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Check out photos from our past events!</h2>
-                 <a href="https://flic.kr/s/aHskFrwpT4" class="btn btn-default btn-xl wow tada">Last Event</a>
+                <a href="https://www.flickr.com/photos/133543877@N03/albums/72157694535126300" class="btn btn-default btn-xl wow tada">Last Event</a>
                 <a href="https://www.flickr.com/photos/133543877@N03/sets" class="btn btn-default btn-xl wow tada">Photo Archives</a>
-                <a href="http://www.boystoystoo.com/cc16.html" class="btn btn-default btn-xl wow tada">BoysToysToo</a>
+                <a href="http://www.boystoystoo.com/cc52017.html" class="btn btn-default btn-xl wow tada">last event BoysToysToo</a>
             </div>
         </div>
     </aside>
@@ -161,8 +161,8 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
-                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box">
-                        <img src="img/portfolio/8_20_1.jpg" class="img-responsive" alt="">
+                    <a href="https://flic.kr/s/aHsmh6DRoC" class="portfolio-box">
+                        <img src="img/portfolio/10_15_1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -176,8 +176,8 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/8_20_2.jpg" class="img-responsive" alt="">
+                    <a href="https://www.flickr.com/photos/133543877@N03/albums/72157694535126300" class="portfolio-box" class="portfolio-box">
+                        <img src="img/portfolio/10_15_2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/8_20_3.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/10_15_3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/8_20_4.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/10_15_4.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
@@ -242,11 +242,6 @@
                 </div>
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="http://www.communitybiblechurch.ws/"><img src="img/CBCLogo_BW.jpg" class="img-responsive" onmouseover="this.src='img/CBCLogo_C.jpg'" onmouseout="this.src='img/CBCLogo_BW.jpg'"/></a>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-3 text-center">
-                    <div class="service-box">
                         <a href="http://www.umallvt.com/"><img src="img/UmallLogoGreen.png" class="img-responsive" onmouseover="this.src='img/UmallLogoGreen.png'" onmouseout="this.src='img/UmallLogoGreen.png'"/></a>
                     </div>
                 </div>
@@ -255,14 +250,7 @@
                         <a href="http://www.ihop.com"><img src="img/ihop_01.jpg" class="img-responsive" onmouseover="this.src='img/ihop_01.jpg'" onmouseout="this.src='img/ihop_01.jpg'"/></a>
                     </div>
                 </div>
-            </div>
-            <br>
-            <br>
-            <div>
-                <a href="http://www.bondauto.com/our-locations/"><img alt=
-            "Bond Auto Parts Banner" src="img/bondautoparts_banner_v1.png" class="img-responsive"/></a>
-            </div>
-            <br>
+             <br>
              <div>
                 <a href="http://www.vtcustomauto.com/"><img alt="Vertmont Auto Service Banner" src="img/vtcustomautoservice_banner_v1.png" class="img-responsive"/></a>
             </div>
