--- a/events.html
+++ b/events.html
@@ -71,8 +71,9 @@
             <div class="row">
                 <div class="col-sm-6 text-left">
                     <div class="service-box">
-                        <h3>C&amp;C September Meetup</h3>
-                        <p class="text-muted">Saturday, SEptember 17th from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
+                        <h3>C&amp;July Meetup</h3>
+                        <p class="text-muted">Saturday, July 18th
+                         from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
                     </div>
                     <div class="service-box">
                         <h3>Check back often for our next season of events!</h3>
@@ -82,7 +83,7 @@
                     <br>
                     <div class="service-box">
                         <h3>Attend other events in the area!</h3>
-                        <a href="http://www.carzcarclub.com/2015_Calendar_of_Events.html" class="btn btn-primary btn-md page-scroll">Carz Car Club</a>
+                        <a href="http://www.carzcarclub.com/events-shows.html" class="btn btn-primary btn-md page-scroll">Carz Car Club</a>
                         <a href="http://www.vtcustomauto.com/Event---Show-Schedule-.html" class="btn btn-primary btn-md page-scroll">VT Custom Auto Service</a>
                         <br>
                         <br>
@@ -91,6 +92,12 @@
                         <br>
                         <br>
                         <a href="http://www.hemmings.com/calendar/?location_stateFacet=Vermont" class="btn btn-primary btn-md page-scroll">Hemmings</a>
+                        <br>
+                        <br>
+                        <a href="http://cvcc1.homestead.com/2014-Car-Shows.html" class="btn btn-primary btn-md page-scroll">Champlain Cruisers</a>
+                        <br>
+                        <br>
+                        <a href="https://www.brownbearsw.com/cal/kruzerz" class="btn btn-primary btn-md page-scroll">Green Mountain Kruzerz Events</a> 
                     </div>
                 </div>
                 </div>
