--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-sm-6 text-left">
                     <div class="service-box">
-                        <h3>C&amp;July Meetup</h3>
+                        <h3>C&amp;C July Meetup</h3>
                         <p class="text-muted">Saturday, July 18th
                          from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
                     </div>
