--- a/events.html
+++ b/events.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78474003-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-78474003-1');
+    </script>
+
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -152,7 +162,7 @@
       google.maps.event.addDomListener(window, 'load', init_map);
     </script>
 
-    <!-- Google Analytics -->
+    <!-- Google Analytics 
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -161,7 +171,7 @@
 
   ga('create', 'UA-66338246-1', 'auto');
   ga('send', 'pageview');
-    </script>
+    </script>-->
 
 </body>
 
