--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78474003-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -10,7 +10,7 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-78474003-1');
-    </script>
+    </script>-->
 
 
     <meta charset="utf-8">
