--- a/index.html
+++ b/index.html
@@ -89,49 +89,42 @@
     </nav>
 
     <header>
+
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
         <div class="header-content">
             <div class="header-content-inner">
-                <img src="img/coffeecarsvt_v2020_next event_jul18.png" width="40%">
+                <img src="img/coffeecarsvt_v6.png" width="40%">
                 <!-- <h2>Fueled by petrol, caffeine, and passion.</h2>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
+                <br><br>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Fueled by petrol, caffeine, and passion.</h2>
-                    <hr class="light">
-                    <p class="text-faded">Once a month on a Saturday morning, car enthusiasts gather to drink coffee, talk cars, and make new friends. CarsCoffeeVermont is an outreach program of Vermont Auto Enthusiasts!</p>
-                    <a href="https://docs.google.com/forms/d/1Fd9gneRBv0IGAphjzetDG__wQjD0WD1iQYdXrmYfxso/viewform?usp=send_form" class="btn btn-default btn-xl">Sign up for our newsletter!</a>
-                    <br>
-                    <br>
-                     <div>
+                <div class="col-lg-8 col-lg-offset-2 text-left">
+                    <div>
                         <a href="http://vtauto.org/">
                             <img style="margin:auto;" alt="Vertmont Auto Enthusiasts Logo" width="25%" margin="auto" src="img/vtautoenthusiasts_logo.png" class="img-responsive"/>
                         </a>
                     </div>
+                    <h2 class="section-heading">Fueled by petrol, caffeine, and passion.</h2>
+                    <hr class="light">
+                    <p>Once a month on a Saturday morning, car enthusiasts gather to drink coffee, talk cars, and make new friends. CarsCoffeeVermont is an outreach program of <a href="http://vtauto.org">Vermont Auto Enthusiasts!</a></p>
                 </div>
-            </div>
-        </div>
-    </section>
 
-    <section id="events">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Upcoming Events</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-             <div class="col-lg-4 col-xs-12 text-center">
+                <div class="col-lg-4 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar-o wow bounceIn text-primary"></i>
-                        <h3>C&amp;C July Meetup</h3>
+                        <h3>Next Events</h3>
                         <p class="text-muted">Saturday, July 18th from 7am - 9am at University Mall - 155 Dorset St, South Burlington</p>
                     </div>
                 </div>
@@ -142,98 +135,68 @@
                         <p class="text-muted">Folks will be at the event regardless of weather conditions. If we don't like the weather, wait 5 minutes.</p>
                     </div>
                 </div>
-               
+                 <div class="col-lg-4 col-xs-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-sun-o wow bounceIn text-primary"></i>
+                        <h3>COVID-19</h3>
+                        <p class="text-muted">Folks will be in danger of COVID19 if they cough on each other.</p>
+                    </div>
+                </div>
+        </div>
+    </section>
+
+    <aside class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Join the Community</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+             <div class="col-lg-4 col-xs-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-calendar-o wow bounceIn text-primary"></i>
+                        <h3>Newsletter</h3>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xs-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-sun-o wow bounceIn text-primary"></i>
+                        <h3>Facebook</h3>
+                    </div>
+                </div>
+                 <div class="col-lg-4 col-xs-12 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-envelope-o wow bounceIn text-primary"></i>
+                        <h3>cars.coffee.vermont@gmail.com</h3>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Calendar</h3>
-                        <p class="text-muted">Other events in the area! </p>
+                        <h3>Other Events</h3>
                     </br>
                         <a href="events.html" class="btn btn-primary btn-xl page-scroll">All Events</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+</aside>
 
-    <aside class="bg-dark" id="photos">
+    <aside id="photos">
         <div class="container text-center">
+            <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">What to Expect</h2>
+                    <hr class="primary">
+                </div>
             <div class="call-to-action">
-                <h2>Check out photos from our past events!</h2>
-                <a href="https://www.flickr.com/photos/133543877@N03/albums/72157694535126300" class="btn btn-default btn-xl wow tada">Last Event</a>
-                <a href="https://www.flickr.com/photos/133543877@N03/sets" class="btn btn-default btn-xl wow tada">Photo Archives</a>
-                <a href="http://www.boystoystoo.com/cc52017.html" class="btn btn-default btn-xl wow tada">last event BoysToysToo</a>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8W1iwkFKBK8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a href="http://www.boystoystoo.com/cc52017.html" class="btn btn-default btn-xl wow tada">Photos of Past Events</a>
             </div>
         </div>
     </aside>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-6 col-sm-6">
-                    <a href="https://flic.kr/s/aHsmh6DRoC" class="portfolio-box">
-                        <img src="img/portfolio/10_15_1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    "You can't buy happiness but you can buy cars and that's kind of the same thing."
-                                </div>
-                                <div class="project-category text-faded">
-                                    Annonymous
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <a href="https://www.flickr.com/photos/133543877@N03/albums/72157694535126300" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/10_15_2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    "Good things happen when you meet strangers."
-                                </div>
-                                <div class="project-category text-faded">
-                                    Yo-Yo Ma
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/10_15_3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    "Everything in life is somewhere else, and you can get there in a car."
-                                </div>
-                                <div class="project-category text-faded">
-                                    E.B. White
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <a href="https://www.flickr.com/photos/133543877@N03/sets" class="portfolio-box" class="portfolio-box">
-                        <img src="img/portfolio/10_15_4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    "Always find time for the things that make you feel happy to be alive."
-                                </div>
-                                <div class="project-category text-faded">
-                                    Annonymous
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
         <section id="sponsors">
         <div class="container">
             <div class="row">
@@ -247,11 +210,6 @@
             <div class="row">
                 <div class="col-xs-6 col-sm-3 text-center">
                     <div class="service-box">
-                        <a href="http://www.signaramavt.com/"><img src="img/SAR_grey.png" class="img-responsive" onmouseover="this.src='img/SAR.png'" onmouseout="this.src='img/SAR_grey.png'"/></a>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-sm-3 text-center">
-                    <div class="service-box">
                         <a href="http://www.umallvt.com/"><img src="img/UmallLogoGreen.png" class="img-responsive" onmouseover="this.src='img/UmallLogoGreen.png'" onmouseout="this.src='img/UmallLogoGreen.png'"/></a>
                     </div>
                 </div>
@@ -261,34 +219,6 @@
                     </div>
                 </div>
              <br>
-             <div>
-                <a href="http://www.vtcustomauto.com/"><img alt="Vertmont Auto Service Banner" src="img/vtcustomautoservice_banner_v1.png" class="img-responsive"/></a>
-            </div>
-        </div>
-    </section>
-
- <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Join our community on Facebook!</h2>
-                <a href="https://www.facebook.com/groups/523141531158247/" class="btn btn-default btn-xl wow tada">Facebook</a>
-            </div>
-        </div>
-    </aside>
-
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Questions or comments? Interested in sponsoring an event? Reach out.</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto: cars.coffee.vermont@gmail.com">cars.coffee.vermont@gmail.com</a></p>
-                </div>
-            </div>
         </div>
     </section>
 
